fix: loading spinner and dialog jump

--- a/style.css
+++ b/style.css
@@ -227,31 +227,6 @@ main {
     button:disabled {
       background-color: lightgrey;
     }
-
-    /* .loader {
-      _position: absolute;
-      _left: 50%;
-      _top: 50%;
-      _transform: translate(-50%, -50%);
-      z-index: 500;
-      border-top: 6px solid red;
-      border-right: 6px solid pink;
-      border-bottom: 6px solid red;
-      border-left: 6px solid pink;
-      border-radius: 50%;
-      width: 40px;
-      height: 40px;
-      animation: spin 2s linear infinite;
-    }
-
-    @keyframes spin {
-      0% {
-        transform: rotate(0deg);
-      }
-      100% {
-        transform: rotate(360deg);
-      }
-    } */
   }
 }
 
@@ -284,7 +259,11 @@ footer {
   }
 }
 
-.loading-overlay {
+#loading-overlay.hidden{
+  display: none;
+}
+
+#loading-overlay {
   position: fixed;
   height: 100%;
   width: 100%;
@@ -295,7 +274,7 @@ footer {
   justify-content: center;
   align-items: center;
 
-  .loading-spinner {
+  #loading-spinner {
       z-index: 500;
       border-top: 16px solid red;
       border-right: 16px solid pink;
