--- a/styles/card.css
+++ b/styles/card.css
@@ -1,4 +1,5 @@
 dialog {
+  position: fixed;
   height: 600px;
   width: 282px;
   /* background-color: #f7f7f5; */
@@ -223,9 +224,6 @@ dialog::backdrop {
         width: 100%;
         height: fit-content;
         margin-top: 16px;
-        /* display: flex;
-        flex-direction: column;
-        justify-content: space-between; */
 
         .base-stats-wrapper {
           width: 100%;
@@ -279,7 +277,6 @@ dialog::backdrop {
                   .full-bar {
                     width: 120px;
                     height: 10px;
-                    /* background-color: #f7f7f5; */
                     background-color: pink;
                     border-radius: 30px;
 
